fix the spacing for tweet button when browser shrinks

--- a/lab2/index.css
+++ b/lab2/index.css
@@ -483,7 +483,8 @@ body {
 
   #tweet-button {
     position: fixed; 
-    bottom: 705px; 
+    /* bottom: 705px;  */
+    top: 10px;
     right: 20px; 
     margin-right: 0; 
   }
